# flashygen

./: .env.example  .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  debug_response.json  main.py  pyproject.toml  sample_note.md  test_models.py
flashygen/: __init__.py  anki_exporter.py  config.py  content_parser.py  flashcard_generator.py  llm.py  manifest.py  notion_client.py
tests/: test_anki_exporter.py  test_assets.py  test_card_count.py  test_card_quality.py  test_checkpoint.py  test_chunking.py  test_cloze.py  test_dedupe.py  test_explainer.py  test_manifest.py  test_parser_blocks.py  test_validation.py
utils/: test_styling.py
